src/index.sass
html, body
  margin: 0
  padding: 0

body
  font-family: Ubuntu, sans-serif;
  user-select: none

