overflow: hidden on body to prevent scroll from flickering

--- a/src/index.sass
+++ b/src/index.sass
@@ -5,3 +5,4 @@ html, body
 body
   font-family: Ubuntu, sans-serif;
   user-select: none
+  overflow: hidden
